k8s/etapa-3.1/02-api-transacoes-v1-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-transacoes
  namespace: tipsbank-transacoes

spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-transacoes
      version: v1

  template:
    metadata:
      labels:
        app: api-transacoes
        version: v1

    spec:
      securityContext:
        fsGroup: 65532

      imagePullSecrets:
        - name: registry-secret

      containers:

      # =========================
      # APP PRINCIPAL
      # =========================
        - name: api-transacoes
          image: ghcr.io/brunosantostecinf-shell/tipsbank-api-transacoes:v1.0.2
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /health/startup
              port: 8080
            periodSeconds: 5
            failureThreshold: 30
            initialDelaySeconds: 30
            timeoutSeconds: 2

          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2

          volumeMounts:
            - name: app-logs
              mountPath: /var/log/app

      # =========================
      # SIDECAR LOG
      # =========================
        - name: log-forwarder
          image: busybox:1.36

          command:
            - sh
            - -c
            - |
              echo "Iniciando sidecar..."
              mkdir -p /var/log/app
              touch /var/log/app/app.log
              tail -F /var/log/app/app.log

          volumeMounts:
            - name: app-logs
              mountPath: /var/log/app

      # =========================
      # VOLUME
      # =========================
      volumes:
        - name: app-logs
          emptyDir: {}
