k8s/etapa-3.1/03-api-transacoes-v2-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-transacoes-v2
  namespace: tipsbank-transacoes
spec:
  replicas: 2

  selector:
    matchLabels:
      app: api-transacoes
      version: v2

  template:
    metadata:
      labels:
        app: api-transacoes
        version: v2

    spec:
      securityContext:
        fsGroup: 65532

      imagePullSecrets:
        - name: registry-secret

      containers:
        - name: api-transacoes
          image: ghcr.io/brunosantostecinf-shell/tipsbank-api-transacoes:v2.0.0
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /health/startup
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
            timeoutSeconds: 3

          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3

          volumeMounts:
            - name: app-logs
              mountPath: /var/log/app

        - name: log-forwarder
          image: busybox:1.36

          command:
            - sh
            - -c
            - |
              mkdir -p /var/log/app
              chmod -R 777 /var/log/app
              touch /var/log/app/app.log
              tail -F /var/log/app/app.log

          volumeMounts:
            - name: app-logs
              mountPath: /var/log/app

      volumes:
        - name: app-logs
          emptyDir: {}
