k8s/etapa-3.1/01-api-contas-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-contas
  namespace: tipsbank-contas
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-contas
  template:
    metadata:
      labels:
        app: api-contas
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: api-contas
          image: ghcr.io/brunosantostecinf-shell/tipsbank-api-contas:v1.0.1
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /health/startup
              port: 8080
            failureThreshold: 30
            periodSeconds: 5
            initialDelaySeconds: 15
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            periodSeconds: 10
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            periodSeconds: 5
            initialDelaySeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: api-contas
  namespace: tipsbank-contas
spec:
  type: ClusterIP
  selector:
    app: api-contas
  ports:
    - port: 8080
      targetPort: 8080
