k8s/etapa-3.1/04-auditoria-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auditoria
  namespace: tipsbank-auditoria
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auditoria
  template:
    metadata:
      labels:
        app: auditoria
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: auditoria
          image: ghcr.io/brunosantostecinf-shell/tipsbank-auditoria:v1.0.0
          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /health/startup
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 30
            timeoutSeconds: 2

          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 2

          volumeMounts:
            - name: auditoria-data
              mountPath: /data
      volumes:
        - name: auditoria-data
          persistentVolumeClaim:
            claimName: pvc-tipsbank-auditoria-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: auditoria
  namespace: tipsbank-auditoria
spec:
  type: ClusterIP
  selector:
    app: auditoria
  ports:
    - port: 8080
      targetPort: 8080
