k8s/etapa-3.1/05-web-probes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: tipsbank-web
spec:
  replicas: 2

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      imagePullSecrets:
        - name: registry-secret

      containers:
        - name: web
          image: ghcr.io/brunosantostecinf-shell/tipsbank-web:v1.0.1

          ports:
            - containerPort: 8080

          startupProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 30
            timeoutSeconds: 2

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2

          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf

      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: tipsbank-web
spec:
  type: ClusterIP
  selector:
    app: web

  ports:
    - port: 8080
      targetPort: 8080
