k8s/etapa-3.1/03-allow-transacoesv2-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-transacoes-egress-to-postgres
  namespace: tipsbank-transacoes
spec:
  podSelector:
    matchLabels:
      app: api-transacoes
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tipsbank-contas
          podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-postgres-from-transacoes
  namespace: tipsbank-contas
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tipsbank-transacoes
          podSelector:
            matchLabels:
              app: api-transacoes
      ports:
        - protocol: TCP
          port: 5432
